Menu almost done

--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -1,5 +1,5 @@
-$background1: #0f1417;
-$background2: #04090f;
-$text1: #e1e4e7;
-$text2: #878789;
+$background1: #222a33;
+$background2: #222a33;
+$text1: #a819ba;
+$text2: #176d76;
 $text3: #e1e4e7;
