--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -45,6 +45,11 @@
 		border-top-width: 3px;
 	}
 
+	.menu_row{
+		display: flex;
+		
+		align-items: center;
+	}
 	.menu_element{
 		color: $text2;
 		font-size: 1.5vw;
@@ -56,6 +61,18 @@
 	.waiting{
 		background-color: $text1;
 		color: white;
+	}
+	.row{
+		opacity: 0%;
+		margin-right: 10px;
+		border-left: 10px solid $text1;
+		border-top: 5px solid transparent;
+		border-bottom: 5px solid transparent;
+	}
+	.selected{
+		.row{
+			opacity: 100%;
+		}
 	}
 	.menu_element:hover{
 		color: $text1;
