bad border done

--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -1,5 +1,6 @@
 $background1: #222a33;
-$background2: #222a33;
+$background2: #212830;
+$background3: #181a1d;
 $text1: #a819ba;
-$text2: #176d76;
+$text2: #248c97;
 $text3: #e1e4e7;
