--- a/src/components/borderAscii/borderAscii.scss
+++ b/src/components/borderAscii/borderAscii.scss
@@ -5,45 +5,45 @@
 	// padding: 200px;
 	width: 100%;
 	// min-height: 300px;
-	background-color: red;
+	// background-color: red;
 }
-.smaller{
-	font-size: 30px;
-}
+
 .top, .bottom, .left, .right {
 	position: absolute;
-	width: calc(100% - 20px);
-	height: 20px;
+	// width: calc(100% - 20px);
+	height: 25px;
 	// background-color: #f0f0f0; /* Color de fondo */
   }
   .top {
 	top: 0;
+	left: 5px;
   }
   
   .bottom {
 	bottom: 0;
+	left: 5px;
   }
   
   .left {
 	top: 15px;
 	left: 0;
 	// height: calc(100% - 40px);
-	width: 20px;
+	// width: 20px;
   }
   
   .right {
 	top: 15px;
 	right: 0;
 	// height: calc(100% - 40px);
-	width: 30px;
+	// width: 20px;
   }
   .center {
 	// position: absolute;
 	// background-color: red;
-	top: 20px; 
-	left: 20px; 
-	right: 20px;
-	bottom: 20px; 
+	// top: 20px; 
+	// left: 20px; 
+	// right: 20px;
+	// bottom: 20px; 
 	padding: 20px;
 	display: flex;
 	
