--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	width: 50vh;
 	// justify-content: center;
+	align-items: center;
 	margin-top: 20px;
 	border-radius: 2px;
 	border: solid $text2;
