help commands done

--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -2,5 +2,6 @@ $background1: #222a33;
 $background2: #212830;
 $background3: #181a1d;
 $text1: #a819ba;
+$text1_1: #852b91;
 $text2: #248c97;
 $text3: #e1e4e7;
