--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -52,6 +52,13 @@
 			p{
 				margin-right: 20px;
 			}
+			.dir{
+				// color: $text1_1;
+			}
+			.exec{
+				// font-style: italic;
+				color: $text3;
+			}
 		}
 	}
 }
