launch initial re

--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -47,8 +47,8 @@
 		}
 		.command_output{
 			display: flex;
-			padding: 3
-			px 0px;
+			padding: 3px 0px;
+			width: 100vh;
 			p{
 				margin-right: 20px;
 			}
