--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -48,7 +48,7 @@
 		.command_output{
 			display: flex;
 			padding: 3px 0px;
-			width: 100vh;
+			width: 100%;
 			p{
 				margin-right: 20px;
 			}
