--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -12,6 +12,10 @@
 		height: 80vh;
 		border: solid 2px grey;
 		
+		overflow-y: auto;
+		
+		// display: flex;
+		// flex-direction: column-reverse;
 		background-color: $background3;
 		border-radius: 10px;
 		padding: 15px;
