--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -13,9 +13,8 @@
 		border: solid 2px grey;
 		
 		overflow-y: auto;
+		overflow: hidden;
 		
-		// display: flex;
-		// flex-direction: column-reverse;
 		background-color: $background3;
 		border-radius: 10px;
 		padding: 15px;
