--- a/src/pages/aboutMe/aboutMe.scss
+++ b/src/pages/aboutMe/aboutMe.scss
@@ -1,14 +1,4 @@
 @import '../../assets/colors.scss';
 .aboutMeContainer{
-	
-	display: flex;
-	justify-content: center;
-	// align-items: cent;
-	height: 100vh;
-	h1{
-		margin-top: 100px;
-	}
-	h2{
-		color: $text1;
-	}
+	width: 100%;
 }
